[tool.poetry]
name = "yb-core"
version = "0.1.0"
description = ""
authors = ["Michael Egorov <michael@curve.fi>"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4"
vyper = "0.4.3"
poetry = "^1"
titanoboa = {git = "https://github.com/vyperlang/titanoboa.git", rev = "5360bbae07950ddfd44bc61fd14f656d036c0315"}
# titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev = "ff16d2d295b8ce60b8a45e3ced06784e8f404afb" }
hypothesis = "^6"
pdbpp = "^0.11.6"
jedi = "^0.19.1"
pytest-xdist = "^3.6"
pytest-forked = "^1.6.0"
ipython = "^9"
# matplotlib = "^3"  # Only for graphs, otherwise not needed
snekmate = "0.1.2"
numpy = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
