[project]
name = "yb-core"
version = "1.0"
description = ""
authors = [{ name = "Michael Egorov", email = "michwill@yieldbasis.com" }]
requires-python = ">=3.11,<4"
dependencies = [
    "vyper==0.4.3",
    "titanoboa==0.2.8",
    "hypothesis>=6,<7",
    "pdbpp",
    "jedi",
    "pytest-xdist>=3.6,<4",
    "pytest-forked>=1.6.0,<2",
    "ipython>=9,<10",
    # "matplotlib>=3,<4"  # Only for graphs, otherwise not needed
    "snekmate==0.1.2",
    "numpy>=2,<3",
    "curve-std",
]

[tool.uv]
package = false
exclude-newer = "1 week"

[tool.uv.sources]
# titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev = "5360bbae07950ddfd44bc61fd14f656d036c0315" }
# titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev = "ff16d2d295b8ce60b8a45e3ced06784e8f404afb" }
curve-std = { git = "https://github.com/curvefi/curve-std.git", rev = "949ae6c0a2c3dfb9e6808aa6d2ca9b737a5afd59" }
